fix missing background color

--- a/src/layouts/UserLayout.less
+++ b/src/layouts/UserLayout.less
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  background: #f0f2f5;
 }
 
 .content {
